--- a/bootcamp/day 09/exercises/Fabio/09_fabio_answer.ipynb
+++ b/bootcamp/day 09/exercises/Fabio/09_fabio_answer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "62643f9b",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e55d8696",
    "metadata": {},
    "outputs": [],
@@ -59,123 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "855cc7f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "region_dict = {\"region_code\": [region.get('code') for region in region_info.items],\n",
     "               \"region_name\": [region.get('name') for region in region_info.items]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "4b9cf52e",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'region_code': ['AFE',\n",
-       "  'AFR',\n",
-       "  'AFW',\n",
-       "  'ARB',\n",
-       "  'CAA',\n",
-       "  'CEA',\n",
-       "  'CEB',\n",
-       "  'CEU',\n",
-       "  'CLA',\n",
-       "  'CME',\n",
-       "  'CSA',\n",
-       "  'CSS',\n",
-       "  'EAP',\n",
-       "  'EAR',\n",
-       "  'EAS',\n",
-       "  'ECA',\n",
-       "  'ECS',\n",
-       "  'EMU',\n",
-       "  'EUU',\n",
-       "  'FCS',\n",
-       "  'HPC',\n",
-       "  'LAC',\n",
-       "  'LCN',\n",
-       "  'LDC',\n",
-       "  'LTE',\n",
-       "  'MDE',\n",
-       "  'MEA',\n",
-       "  'MNA',\n",
-       "  'NAC',\n",
-       "  'NAF',\n",
-       "  'NRS',\n",
-       "  'OED',\n",
-       "  'OSS',\n",
-       "  'PRE',\n",
-       "  'PSS',\n",
-       "  'PST',\n",
-       "  'RRS',\n",
-       "  'SAS',\n",
-       "  'SSA',\n",
-       "  'SSF',\n",
-       "  'SST',\n",
-       "  'SXZ',\n",
-       "  'WLD',\n",
-       "  'XZN'],\n",
-       " 'region_name': ['Africa Eastern and Southern',\n",
-       "  'Africa',\n",
-       "  'Africa Western and Central',\n",
-       "  'Arab World',\n",
-       "  'Sub-Saharan Africa (IFC classification)',\n",
-       "  'East Asia and the Pacific (IFC classification)',\n",
-       "  'Central Europe and the Baltics',\n",
-       "  'Europe and Central Asia (IFC classification)',\n",
-       "  'Latin America and the Caribbean (IFC classification)',\n",
-       "  'Middle East and North Africa (IFC classification)',\n",
-       "  'South Asia (IFC classification)',\n",
-       "  'Caribbean small states',\n",
-       "  'East Asia & Pacific (excluding high income)',\n",
-       "  'Early-demographic dividend',\n",
-       "  'East Asia & Pacific',\n",
-       "  'Europe & Central Asia (excluding high income)',\n",
-       "  'Europe & Central Asia',\n",
-       "  'Euro area',\n",
-       "  'European Union',\n",
-       "  'Fragile and conflict affected situations',\n",
-       "  'Heavily indebted poor countries (HIPC)',\n",
-       "  'Latin America & Caribbean (excluding high income)',\n",
-       "  'Latin America & Caribbean ',\n",
-       "  'Least developed countries: UN classification',\n",
-       "  'Late-demographic dividend',\n",
-       "  'Middle East (developing only)',\n",
-       "  'Middle East & North Africa',\n",
-       "  'Middle East & North Africa (excluding high income)',\n",
-       "  'North America',\n",
-       "  'North Africa',\n",
-       "  'Non-resource rich Sub-Saharan Africa countries',\n",
-       "  'OECD members',\n",
-       "  'Other small states',\n",
-       "  'Pre-demographic dividend',\n",
-       "  'Pacific island small states',\n",
-       "  'Post-demographic dividend',\n",
-       "  'Resource rich Sub-Saharan Africa countries',\n",
-       "  'South Asia',\n",
-       "  'Sub-Saharan Africa (excluding high income)',\n",
-       "  'Sub-Saharan Africa ',\n",
-       "  'Small states',\n",
-       "  'Sub-Saharan Africa excluding South Africa',\n",
-       "  'World',\n",
-       "  'Sub-Saharan Africa excluding South Africa and Nigeria']}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "region_dict"
    ]
   },
   {
@@ -190,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1c260c4e",
    "metadata": {},
    "outputs": [],
@@ -212,13 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "1654bc52",
    "metadata": {},
    "outputs": [],
    "source": [
     "serie_afr = wb.data.DataFrame(series = ['SP.ADO.TFRT'], \n",
-    "                              # economy =  ,\n",
     "                              economy = region_df['region_code'],\n",
     "                              time = \"all\")"
    ]
@@ -235,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "eb0a616b",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "serie_afr.dropna(axis=1, how = 'all', inplace = True)"
+    "serie_afr.dropna(axis = 1, how = 'all', inplace = True)"
    ]
   },
   {
@@ -255,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "97f729d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "serie_afr_long = serie_afr.melt(var_name = \"year\", \n",
-    "                                value_name = \"af_rate\", \n",
+    "serie_afr_long = serie_afr.melt(var_name = \"year\",\n",
+    "                                value_name = \"af_rate\",\n",
     "                                ignore_index = False)"
    ]
   },
@@ -277,17 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "541adccf",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "serie_afr_long = (serie_afr_long\n",
-    "                 .merge(right = region_df, \n",
-    "                        how = \"inner\", \n",
-    "                        left_on = \"economy\", \n",
+    "                 .merge(right = region_df,\n",
+    "                        how = \"inner\",\n",
+    "                        left_on = \"economy\",\n",
     "                        right_on = \"region_code\")\n",
     "                 .set_index(\"region_code\"))"
    ]
@@ -302,40 +189,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "d4c0cccb",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": null,
+   "id": "a538428a",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# uma opção\n",
-    "\n",
-    "serie_afr_long[\"year\"] = serie_afr_long.year.map(lambda s: s.strip(\"YR\"))"
+    "serie_afr_long[\"year\"] = serie_afr_long[\"year\"].str.strip(\"YR\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f3edeb1",
+   "id": "a3851a71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# outra opção\n",
-    "\n",
-    "serie_afr_long[\"year\"] = serie_afr_long.year.str.strip(\"YR\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "a538428a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# outra opção\n",
-    "\n",
-    "serie_afr_long = serie_afr_long.assign(year = lambda y: y['year'].str.strip(\"YR\"))"
+    "# ou\n",
+    "serie_afr_long = serie_afr_long.assign(year = lambda df: df['year'].str.strip(\"YR\"))"
    ]
   },
   {
@@ -343,7 +213,7 @@
    "id": "b9814993",
    "metadata": {},
    "source": [
-    "# Explorando as estatísticas brasileiras de comércio exterior."
+    "# Explorando as estatísticas brasileiras de comércio exterior "
    ]
   },
   {
@@ -351,7 +221,7 @@
    "id": "1cc69690",
    "metadata": {},
    "source": [
-    "Vamos criar um DataFrame com as importações, exportações e saldo comercial bilateral do Brasil com seus parceiros comerciais, de 2012 a 2022, em milhões de dólares americanos."
+    "Vamos criar um DataFrame com as importações, exportações e saldo comercial bilateral do Brasil com seus parceiros comerciais, de 2012 a 2022."
    ]
   },
   {
@@ -364,11 +234,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9bc66852",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "id": "8aaf3829",
+   "metadata": {},
    "outputs": [],
    "source": [
     "serie_imp = pd.read_csv(\"data/IMP_2012_2022_20230921.csv\", sep = \";\")\n",
@@ -376,18 +244,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "40ce9da1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "serie_imp['vl_usd_milhoes'] = serie_imp['valor_fob_usd'] / 1e6"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "1e6a88a3",
+   "id": "8c7df2c9",
    "metadata": {},
    "source": [
     "Crie as colunas **vl_usd_milhoes**, com os valores em milhões de dólares, em ambos DataFrames. Remove as colunas de valor originais."
@@ -395,153 +253,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5c4a087e",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "id": "053cf5a7",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "serie_imp['vl_usd_milhoes'] = serie_imp['valor_fob_usd'].map(lambda x: x / 1e6)\n",
-    "serie_exp['vl_usd_milhoes'] = serie_exp['valor_fob_usd'].map(lambda x: x / 1e6)\n",
-    "\n",
+    "serie_imp[\"vl_usd_milhoes\"] = serie_imp[\"valor_fob_usd\"] / 1e6\n",
+    "serie_exp[\"vl_usd_milhoes\"] = serie_exp[\"valor_fob_usd\"] / 1e6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c142cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "serie_imp.drop('valor_fob_usd', axis = 1, inplace = True)\n",
     "serie_exp.drop('valor_fob_usd', axis = 1, inplace = True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "93ea392b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ano</th>\n",
-       "      <th>país</th>\n",
-       "      <th>vl_usd_milhoes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>China</td>\n",
-       "      <td>89427.761284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Estados Unidos</td>\n",
-       "      <td>37437.814354</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>15344.651930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Países Baixos (Holanda)</td>\n",
-       "      <td>11927.910064</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Espanha</td>\n",
-       "      <td>9747.538076</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2601</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Wake, Ilha</td>\n",
-       "      <td>0.003191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2602</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Madeira, Ilha da</td>\n",
-       "      <td>0.002392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2603</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Canal, Ilhas do (Guernsey)</td>\n",
-       "      <td>0.001305</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2604</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Marianas do Norte, Ilhas</td>\n",
-       "      <td>0.001092</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2605</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Vaticano</td>\n",
-       "      <td>0.000930</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2606 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       ano                        país  vl_usd_milhoes\n",
-       "0     2022                       China    89427.761284\n",
-       "1     2022              Estados Unidos    37437.814354\n",
-       "2     2022                   Argentina    15344.651930\n",
-       "3     2022     Países Baixos (Holanda)    11927.910064\n",
-       "4     2022                     Espanha     9747.538076\n",
-       "...    ...                         ...             ...\n",
-       "2601  2012                  Wake, Ilha        0.003191\n",
-       "2602  2012            Madeira, Ilha da        0.002392\n",
-       "2603  2012  Canal, Ilhas do (Guernsey)        0.001305\n",
-       "2604  2012    Marianas do Norte, Ilhas        0.001092\n",
-       "2605  2012                    Vaticano        0.000930\n",
-       "\n",
-       "[2606 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "serie_exp"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "f3e00228",
+   "id": "9711c8bf",
    "metadata": {},
    "source": [
     "Junte os dois objetos no DataFrame **serie_exp_imp**, contendo as colunas **ano**, **país**, **vl_usd_milhoes_exp** e **vl_usd_milhoes_imp**.\n",
@@ -555,18 +289,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "053cf5a7",
+   "execution_count": 45,
+   "id": "28c5649d",
    "metadata": {},
    "outputs": [],
    "source": [
     "serie_exp_imp = (serie_exp\n",
-    "                 .merge(serie_imp, \n",
-    "                        on = [\"ano\", \"país\"], \n",
-    "                        suffixes = [\"_exp\", \"_imp\"], \n",
-    "                        how = \"outer\")\n",
-    "                 .fillna(value = int(0))\n",
-    "                 .assign(saldo_usd_milhoes = lambda x: x['vl_usd_milhoes_exp'] - x['vl_usd_milhoes_imp']))"
+    "                .merge(serie_imp,\n",
+    "                       on = [\"ano\", \"país\"],\n",
+    "                       suffixes = [\"_exp\", \"_imp\"],\n",
+    "                       how = \"outer\")\n",
+    "                .fillna(value = 0)\n",
+    "                .assign(saldo_usd_milhoes = lambda df: df['vl_usd_milhoes_exp'] - df['vl_usd_milhoes_imp']))"
    ]
   },
   {
@@ -586,8 +320,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maiores_saldos_2020 = (serie_exp_imp\n",
-    "                       .query('ano == 2022')\n",
+    "maiores_saldos_2022 = (serie_exp_imp                       \n",
+    "                       .loc[serie_exp_imp[\"ano\"] == 2022, :]\n",
     "                       .sort_values(by = \"saldo_usd_milhoes\", ascending = False)\n",
     "                       .head(10))"
    ]
