--- a/bootcamp/day 00/Abertura.ipynb
+++ b/bootcamp/day 00/Abertura.ipynb
@@ -768,6 +768,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9af47cbd-9659-4f98-b3a2-18c93ec87a6b",
+   "metadata": {},
+   "source": [
+    "## Resumo Executivo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7982f8e-7c1a-4efe-8774-f224845e31ff",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "<tr><td>Terceira Semana</td><td>Segunda-feira</td><td>Terça-feira</td><td>Quarta-feira</td><td>Quinta-feira</td></tr>\n",
+    "<tr><td>Manhã</td><td>---</td><td>---</td><td>Inscrição (20 primeiras propostas)</td><td>Apresentações (2h)<br />Ranqueamento (1h)</td></tr>\n",
+    "<tr><td>Tarde</td><td>Viabilidade do Projeto<br />(Instrutores e Monitores)</td><td>Viabilidade do Projeto<br />(Instrutores e Monitores)</td><td>Resultado da Inscrição</td><td>Resultado da Distribuição</td></tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ed1da39c-ec4f-4b68-bfd2-088ad17039a1",
    "metadata": {
     "slideshow": {
@@ -789,7 +809,9 @@
    "source": [
     "Apresentação das ideias/propostas de projeto final no início da terceira semana.\n",
     "\n",
-    "Na segunda-feira, bem como na terça-feira, veja com seu(sua) monitor(a) preferido(a) a viabilidade da sua ideia/proposta de projeto final."
+    "Na segunda-feira, bem como na terça-feira, veja com seu(sua) monitor(a) preferido(a) a viabilidade da sua ideia/proposta de projeto final.\n",
+    "\n",
+    "Recomendação de escopo: avaliação de políticas públicas."
    ]
   },
   {
@@ -813,7 +835,7 @@
     }
    },
    "source": [
-    "Na quarta-feira, serão apresentadas -- no máximo –- as 20 primeiras propostas submetidas;\n",
+    "Na quinta-feira, serão apresentadas -- no máximo –- as 20 primeiras propostas submetidas;\n",
     "<ul>\n",
     "    <li>2h horas e meia para apresentação de todas as ideias/propostas;</li>\n",
     "    <li>estima-se 5 minutos para cada apresentação.</li>\n",
@@ -832,6 +854,9 @@
     "Na mesma manhã, haverá uma votação em que as alunas definirão sua ordem de preferência dos projetos;\n",
     "<ul>\n",
     "    <li>30 minutos para o ranqueamento dos projetos por cada aluna;</li>\n",
+    "    <ul>\n",
+    "        <li>a aluna líder do projeto deve ranquear o seu projeto, caso selecionado, em primeiro lugar.</li>\n",
+    "    </ul>\n",
     "    <li>as 10 propostas -- no máximo -- mais bem ranqueadas serão escolhidas;</li>\n",
     "    <li>as alunas serão distribuídas de acordo com as preferências;</li>\n",
     "</ul>"
@@ -931,7 +956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "toc": {
    "base_numbering": 1,
