--- a/bootcamp/day 00/Abertura.ipynb
+++ b/bootcamp/day 00/Abertura.ipynb
@@ -701,14 +701,14 @@
     "        <td align='center'>Análise de Dados em Alto Desempenho (Parte II)</td>\n",
     "        <td align='center'>Limpeza e Preparação dos Dados</td>\n",
     "        <td align='center'><b>Feriado</b></td>\n",
-    "        <td align='center'>Tratamento dos Dados</td>\n",
+    "        <td align='center'><b>Tira-Dúvidas<br />(Ponto Facultativo)</b></td>\n",
     "    </tr>\n",
     "    <tr align='center'>\n",
-    "        <td align='center'>Visualização de Dados<br />Comunicado sobre Projetos Finais</td>\n",
-    "        <td align='center'>Visualização de Dados - Continuação<br />Agregação dos Dados</td>\n",
-    "        <td align='center'>Dia D do Projeto<br />Propostas<br />Ranking das Propostas<br />Divisão das Equipes<br />Início da Execução</td>\n",
-    "        <td align='center'>Desenvolvimento Web<br />Desenvolvimento Colaborativo</td>\n",
-    "        <td align='center'>Desenvolvimento Embarcado em Inteligência de Negócio</td>\n",
+    "        <td align='center'>Tratamento dos Dados<br />Comunicado sobre Projetos Finais</td>\n",
+    "        <td align='center'>Visualização de Dados</td>\n",
+    "        <td align='center'>Visualização de Dados - Continuação<br />Agregação dos Dados<br />Regressão Liniear</td>\n",
+    "        <td align='center'>Dia D do Projeto<br />Propostas<br />Ranking das Propostas<br />Distribuição das Equipes<br />Início da Execução</td>\n",
+    "        <td align='center'>Desenvolvimento Web<br />Desenvolvimento Colaborativo<br />Execução dos Trabalhos em Equipes (Período Vespertino)</td>\n",
     "    </tr>\n",
     "</table>"
    ]
@@ -743,10 +743,11 @@
     "        <th align='center'>Sexta</th>\n",
     "    </tr>\n",
     "    <tr align='center'>\n",
-    "        <td align='center' colspan=5>Execução dos Trabalhos em Equipes</td>\n",
+    "        <td align='center'>Desenvolvimento Embarcado em Inteligência de Negócio<br />Execução dos Trabalhos em Equipes (Período Vespertino)</td>\n",
+    "        <td align='center' colspan=4>Execução dos Trabalhos em Equipes (Período Integral)</td>\n",
     "    </tr>\n",
     "    <tr align='center'>\n",
-    "        <td align='center' colspan=2>Execução dos Trabalhos em Equipes</td>\n",
+    "        <td align='center' colspan=2>Execução dos Trabalhos em Equipes (Período Integral)</td>\n",
     "        <td align='center'>Encerramento do Bootcamp com Apresentações dos Projetos</td>\n",
     "        <td></td>\n",
     "        <td></td>\n",
@@ -771,7 +772,7 @@
    "id": "9af47cbd-9659-4f98-b3a2-18c93ec87a6b",
    "metadata": {},
    "source": [
-    "## Resumo Executivo"
+    "## Resumo Executivo da Proposição e Seleção de Projetos Finais"
    ]
   },
   {
@@ -790,9 +791,11 @@
    "cell_type": "markdown",
    "id": "ed1da39c-ec4f-4b68-bfd2-088ad17039a1",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "-"
-    }
+     "slide_type": "subslide"
+    },
+    "tags": []
    },
    "source": [
     "## Ideias/Propostas"
