--- a/bootcamp/day 10/exercises/Fabio/10_fabio_exercise.ipynb
+++ b/bootcamp/day 10/exercises/Fabio/10_fabio_exercise.ipynb
@@ -31,18 +31,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de4115fc",
+   "id": "3dfc090a",
    "metadata": {},
    "outputs": [],
    "source": [
     "regioes_cores = {'Sub-Saharan Africa ':  \"#ec553a\" ,\n",
     "                 'Latin America & Caribbean ': \"#59C090\",\n",
     "                 'World': \"#00538a\",\n",
-    "                 'Middle East & North Africa': \"#ffffff\",\n",
+    "                 'Middle East & North Africa': \"#B25DFE\",\n",
     "                 'South Asia': \"#fdb714\",\n",
     "                 'East Asia & Pacific': \"#009fda\",\n",
     "                 'North America': \"#666666\",\n",
-    "                 'Europe & Central Asia': \"#FE7CCE\"}"
+    "                 'Europe & Central Asia': \"#FE7CCE\"}\n",
+    "            "
    ]
   },
   {
@@ -53,9 +54,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "plt.figure(figsize=(16, 8))"
+    "import seaborn as sns"
    ]
   },
   {
