--- a/bootcamp/day 10/exercises/Fabio/10_fabio_answer.ipynb
+++ b/bootcamp/day 10/exercises/Fabio/10_fabio_answer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "b68d511a",
    "metadata": {
     "scrolled": true
@@ -33,151 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "c585cdf4",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>region_code</th>\n",
-       "      <th>year</th>\n",
-       "      <th>af_rate</th>\n",
-       "      <th>region_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>EAS</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>56.780825</td>\n",
-       "      <td>East Asia &amp; Pacific</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EAS</td>\n",
-       "      <td>1961</td>\n",
-       "      <td>52.707745</td>\n",
-       "      <td>East Asia &amp; Pacific</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>EAS</td>\n",
-       "      <td>1962</td>\n",
-       "      <td>65.682675</td>\n",
-       "      <td>East Asia &amp; Pacific</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>EAS</td>\n",
-       "      <td>1963</td>\n",
-       "      <td>75.292342</td>\n",
-       "      <td>East Asia &amp; Pacific</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EAS</td>\n",
-       "      <td>1964</td>\n",
-       "      <td>66.320154</td>\n",
-       "      <td>East Asia &amp; Pacific</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>491</th>\n",
-       "      <td>WLD</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>44.917716</td>\n",
-       "      <td>World</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>492</th>\n",
-       "      <td>WLD</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>44.070807</td>\n",
-       "      <td>World</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>493</th>\n",
-       "      <td>WLD</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>43.372848</td>\n",
-       "      <td>World</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>494</th>\n",
-       "      <td>WLD</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>42.745881</td>\n",
-       "      <td>World</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>WLD</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>42.479374</td>\n",
-       "      <td>World</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>496 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    region_code  year    af_rate          region_name\n",
-       "0           EAS  1960  56.780825  East Asia & Pacific\n",
-       "1           EAS  1961  52.707745  East Asia & Pacific\n",
-       "2           EAS  1962  65.682675  East Asia & Pacific\n",
-       "3           EAS  1963  75.292342  East Asia & Pacific\n",
-       "4           EAS  1964  66.320154  East Asia & Pacific\n",
-       "..          ...   ...        ...                  ...\n",
-       "491         WLD  2017  44.917716                World\n",
-       "492         WLD  2018  44.070807                World\n",
-       "493         WLD  2019  43.372848                World\n",
-       "494         WLD  2020  42.745881                World\n",
-       "495         WLD  2021  42.479374                World\n",
-       "\n",
-       "[496 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "serie_afr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "5d68310b",
    "metadata": {},
    "outputs": [],
@@ -195,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "c463377b",
    "metadata": {},
    "outputs": [],
@@ -205,17 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6761cd2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "01ef7c5c",
    "metadata": {},
    "outputs": [
@@ -294,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "14a7f7b1",
    "metadata": {},
    "outputs": [],
@@ -304,12 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8fd20914",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"545px\"\n",
+       "    src=\"iframe_figures/figure_6.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly.express as px\n",
     "import plotly.io as pio\n",
@@ -325,265 +188,6 @@
     "fig.update_layout(margin = dict(t=50, l=25, r=25, b=25))\n",
     "\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "1f5e7c56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "url = \"https://dadosabertos-download.cgu.gov.br/PortalDaTransparencia/saida/novo-bolsa-familia/202303_NovoBolsaFamilia.zip\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "d29ccf2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "teste_bolsa_familia = pd.read_csv(url, compression = \"zip\", sep = \";\", encoding = \"ISO-8859-1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "af1f62c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MÊS COMPETÊNCIA</th>\n",
-       "      <th>MÊS REFERÊNCIA</th>\n",
-       "      <th>UF</th>\n",
-       "      <th>CÓDIGO MUNICÍPIO SIAFI</th>\n",
-       "      <th>NOME MUNICÍPIO</th>\n",
-       "      <th>CPF FAVORECIDO</th>\n",
-       "      <th>NIS FAVORECIDO</th>\n",
-       "      <th>NOME FAVORECIDO</th>\n",
-       "      <th>VALOR PARCELA</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>643</td>\n",
-       "      <td>ACRELANDIA</td>\n",
-       "      <td>***.833.642-**</td>\n",
-       "      <td>1.616761e+10</td>\n",
-       "      <td>ABIGAIL DAGMAR MACHADO</td>\n",
-       "      <td>771,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>643</td>\n",
-       "      <td>ACRELANDIA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.612203e+10</td>\n",
-       "      <td>ABRAAO AMORA SALGUEIRO</td>\n",
-       "      <td>600,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>643</td>\n",
-       "      <td>ACRELANDIA</td>\n",
-       "      <td>***.355.042-**</td>\n",
-       "      <td>1.612166e+10</td>\n",
-       "      <td>ABRAAO DA PIEDADE DO NASCIMENTO</td>\n",
-       "      <td>750,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>643</td>\n",
-       "      <td>ACRELANDIA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.365511e+10</td>\n",
-       "      <td>ABRAAO SILVA CUNHA</td>\n",
-       "      <td>600,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>643</td>\n",
-       "      <td>ACRELANDIA</td>\n",
-       "      <td>***.050.782-**</td>\n",
-       "      <td>1.609444e+10</td>\n",
-       "      <td>ABRAO KEMPNER RUMANZKI</td>\n",
-       "      <td>600,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20384552</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>9643</td>\n",
-       "      <td>XAMBIOA</td>\n",
-       "      <td>***.947.867-**</td>\n",
-       "      <td>2.070254e+10</td>\n",
-       "      <td>YASMIM SILVA FRANCISCO</td>\n",
-       "      <td>750,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20384553</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>9643</td>\n",
-       "      <td>XAMBIOA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.032433e+10</td>\n",
-       "      <td>ZEILA MARIA BATISTA</td>\n",
-       "      <td>600,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20384554</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>9643</td>\n",
-       "      <td>XAMBIOA</td>\n",
-       "      <td>***.597.141-**</td>\n",
-       "      <td>2.093638e+10</td>\n",
-       "      <td>ZENATI RODRIGUES DA SILVA</td>\n",
-       "      <td>440,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20384555</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>9643</td>\n",
-       "      <td>XAMBIOA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.905866e+10</td>\n",
-       "      <td>ZENOLIA RAMOS DA SILVA CARVALHO</td>\n",
-       "      <td>600,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20384556</th>\n",
-       "      <td>202303</td>\n",
-       "      <td>202303</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>9643</td>\n",
-       "      <td>XAMBIOA</td>\n",
-       "      <td>***.822.651-**</td>\n",
-       "      <td>2.091926e+10</td>\n",
-       "      <td>ZILMA ALVES DE BARROS</td>\n",
-       "      <td>440,00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>20384557 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          MÊS COMPETÊNCIA  MÊS REFERÊNCIA  UF  CÓDIGO MUNICÍPIO SIAFI  \\\n",
-       "0                  202303          202303  AC                     643   \n",
-       "1                  202303          202303  AC                     643   \n",
-       "2                  202303          202303  AC                     643   \n",
-       "3                  202303          202303  AC                     643   \n",
-       "4                  202303          202303  AC                     643   \n",
-       "...                   ...             ...  ..                     ...   \n",
-       "20384552           202303          202303  TO                    9643   \n",
-       "20384553           202303          202303  TO                    9643   \n",
-       "20384554           202303          202303  TO                    9643   \n",
-       "20384555           202303          202303  TO                    9643   \n",
-       "20384556           202303          202303  TO                    9643   \n",
-       "\n",
-       "         NOME MUNICÍPIO  CPF FAVORECIDO  NIS FAVORECIDO  \\\n",
-       "0            ACRELANDIA  ***.833.642-**    1.616761e+10   \n",
-       "1            ACRELANDIA             NaN    1.612203e+10   \n",
-       "2            ACRELANDIA  ***.355.042-**    1.612166e+10   \n",
-       "3            ACRELANDIA             NaN    2.365511e+10   \n",
-       "4            ACRELANDIA  ***.050.782-**    1.609444e+10   \n",
-       "...                 ...             ...             ...   \n",
-       "20384552        XAMBIOA  ***.947.867-**    2.070254e+10   \n",
-       "20384553        XAMBIOA             NaN    2.032433e+10   \n",
-       "20384554        XAMBIOA  ***.597.141-**    2.093638e+10   \n",
-       "20384555        XAMBIOA             NaN    1.905866e+10   \n",
-       "20384556        XAMBIOA  ***.822.651-**    2.091926e+10   \n",
-       "\n",
-       "                          NOME FAVORECIDO VALOR PARCELA  \n",
-       "0                  ABIGAIL DAGMAR MACHADO        771,00  \n",
-       "1                  ABRAAO AMORA SALGUEIRO        600,00  \n",
-       "2         ABRAAO DA PIEDADE DO NASCIMENTO        750,00  \n",
-       "3                      ABRAAO SILVA CUNHA        600,00  \n",
-       "4                  ABRAO KEMPNER RUMANZKI        600,00  \n",
-       "...                                   ...           ...  \n",
-       "20384552           YASMIM SILVA FRANCISCO        750,00  \n",
-       "20384553              ZEILA MARIA BATISTA        600,00  \n",
-       "20384554        ZENATI RODRIGUES DA SILVA        440,00  \n",
-       "20384555  ZENOLIA RAMOS DA SILVA CARVALHO        600,00  \n",
-       "20384556            ZILMA ALVES DE BARROS        440,00  \n",
-       "\n",
-       "[20384557 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "teste_bolsa_familia"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "3f51df52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "teste_bolsa_familia = pd.read_csv(arquivo_bolsa, sep = \";\", encoding = \"ISO-8859-1\")"
    ]
   }
  ],
